Update GitHub Auth
